Fixes #55 layout breakage on Windows. Not sure why this works but it does.

--- a/packages/dapp/assets/scss/main.scss
+++ b/packages/dapp/assets/scss/main.scss
@@ -590,7 +590,7 @@ body.pushing .page-qa #push-icon {
     background-color: $blue;
     margin-left: -40px;
     margin-right: -40px;
-    margin-top: -60px;
+    margin-top: -55px;
     margin-bottom: 40px;
 }
 
